force-app/main/default/objects/ProjectServiceMaterial__c/ProjectServiceMaterial__c.object-meta.xml
<CustomObject>
    <description>Relates Material to a Project Service. Material is added manually when building a Project. Project Service Material is related to Project Service and Material.</description>
    <label>Project Service Material</label>
    <nameField>
        <displayFormat>PSM-{00000000}</displayFormat>
        <label>Project Service Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>