force-app/main/default/objects/ProjectServiceMaterial__c/fields/CostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>CostPerUnit__c</fullName>
    <formula>Material__r.EstimatedCostPerUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>