force-app/main/default/objects/ProjectServiceMaterial__c/fields/CustomDescription__c.field-meta.xml
<CustomField>
    <fullName>CustomDescription__c</fullName>
    <label>Custom Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>