force-app/main/default/objects/ProjectServiceMaterial__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Additional Cost</fullName>
            </value>
            <value>
                <fullName>Partner 1</fullName>
            </value>
            <value>
                <fullName>Partner 2</fullName>
            </value>
            <value>
                <fullName>Partner 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>