force-app/main/default/objects/ProjectServiceMaterial__c/fields/Kit__c.field-meta.xml
<CustomField>
    <fullName>Kit__c</fullName>
    <formula>Material__r.Kit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit</label>
    <type>Checkbox</type>
</CustomField>