force-app/main/default/objects/ProjectServiceMaterial__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Material__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Project Service Material</relationshipLabel>
    <relationshipName>ProjectServiceMaterial</relationshipName>
    <type>Lookup</type>
</CustomField>