force-app/main/default/objects/ProjectServiceMaterial__c/fields/MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>MaterialDescription__c</fullName>
    <label>Material Description</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>