force-app/main/default/objects/ProjectServiceMaterial__c/fields/MaterialName__c.field-meta.xml
<CustomField>
    <fullName>MaterialName__c</fullName>
    <formula>Material__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Name</label>
    <type>Text</type>
</CustomField>