force-app/main/default/objects/ProjectServiceMaterial__c/fields/UseType__c.field-meta.xml
<CustomField>
    <fullName>UseType__c</fullName>
    <label>UseType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Location</fullName>
                <default>true</default>
                <label>By Location</label>
            </value>
            <value>
                <fullName>By Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>