force-app/main/default/objects/ProjectServiceMaterial__c/validationRules/Disallow_materials_for_MultiDay_Projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_materials_for_MultiDay_Projects</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW() ,ProjectService__r.Project__r.ProjectType__r.AllowMultidays__c == True)</errorConditionFormula>
    <errorMessage>Materials cannot be added to a multi day project.</errorMessage>
</ValidationRule>