force-app/main/default/objects/ProjectServiceMaterial__c/validationRules/Invalid_Material.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Material</fullName>
    <active>true</active>
    <errorConditionFormula>Material__c = null || Material__c = &#39;&#39;</errorConditionFormula>
    <errorMessage>Invalid Material. Please select a valid material.</errorMessage>
</ValidationRule>