force-app/main/default/objects/ProjectServiceMaterial__c/validationRules/Invalid_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISNULL(Quantity__c),
Quantity__c&lt;=0 || Quantity__c&gt;99999)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Please enter a valid quantity between 1 and 99999</errorMessage>
</ValidationRule>